--- a/src/app/modules/specialfeature/StudentActivity/studentactivity.component.scss
+++ b/src/app/modules/specialfeature/StudentActivity/studentactivity.component.scss
@@ -15,9 +15,14 @@ mat-form-field {
     flex:1 0 40px;
 }
 .mat-column-RankId,
-.mat-column-Active,
+.mat-column-Active{
+  flex:1 0 70px;
+}
 .mat-column-Action{
-    flex:1 0 100px;
+    flex:1 0 130px;
+}
+.mat-column-Student{
+  flex:1 0 150px;
 }
 .mat-column-Achievement{
   flex:1 0 200px;
@@ -25,7 +30,9 @@ mat-form-field {
 .mat-column-SportsNameId,
 .mat-column-CategoryId,
 .mat-column-SubCategoryId,
-.mat-column-AchievementDate,
 .mat-column-SessionId{
     flex:1 0 120px;
+}
+.mat-column-AchievementDate
+{    flex:1 0 125px;
 }
