--- a/src/app/modules/Accounting/ledgerbalance/ledgerbalance.component.scss
+++ b/src/app/modules/Accounting/ledgerbalance/ledgerbalance.component.scss
@@ -2,7 +2,10 @@ mat-form-field {
     width       : 98%;
     margin-right: 15px;
 }
-
+mat-cell,mat-header-cell{
+    border-right: 1px solid lightgray;
+    padding: 10px;
+}
 .mat-column-AccountNatureId,
 .mat-column-AccountGroupId,
 .mat-column-GeneralLedgerName,
