--- a/src/app/modules/Accounting/trial-balance/trial-balance.component.html
+++ b/src/app/modules/Accounting/trial-balance/trial-balance.component.html
@@ -3,8 +3,19 @@
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 
 <form [formGroup]="searchForm">
-   
-    <mat-form-field appearance="outline" [style.width.px]="350" style="margin-right:15px;">
+    <mat-form-field appearance="outline" [style.width.px]="150">
+        <mat-label>From</mat-label>
+        <input formControlName="searchFromDate" matInput [matDatepicker]="FromDate" autocomplete="off">
+        <mat-datepicker-toggle matSuffix [for]="FromDate"></mat-datepicker-toggle>
+        <mat-datepicker #FromDate></mat-datepicker>
+    </mat-form-field>
+     <mat-form-field appearance="outline" [style.width.px]="150">
+        <mat-label>To</mat-label>
+        <input formControlName="searchToDate" matInput [matDatepicker]="ToDate" autocomplete="off">
+        <mat-datepicker-toggle matSuffix [for]="ToDate"></mat-datepicker-toggle>
+        <mat-datepicker #ToDate></mat-datepicker>
+    </mat-form-field>
+    <!-- <mat-form-field appearance="outline" [style.width.px]="350" style="margin-right:15px;">
         <mat-label>Account</mat-label>
         <input type="text" matInput formControlName="searchGeneralLedgerId" [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
@@ -12,7 +23,7 @@
                 {{option.GeneralLedgerName}}
             </mat-option>
         </mat-autocomplete>
-    </mat-form-field>
+    </mat-form-field> -->
     <button [disabled]="loading" mat-raised-button color="accent" (click)="GetAccountingVoucher()">
         <mat-icon>search</mat-icon>
         <mat-icon *ngIf="loading">
