--- a/src/app/modules/attendance/absentlist/absentlist.component.scss
+++ b/src/app/modules/attendance/absentlist/absentlist.component.scss
@@ -31,6 +31,7 @@ mat-header-cell {
 .mat-column-ClassName{
     flex: 1 1 100px;
 }
+.mat-column-AttendanceDate,
 .mat-column-ApprovedByName,
 .mat-column-StudentRollNo,
 .mat-column-ContactNo,
